[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.104.1",
    "asyncpg>=0.31.0",
    "drain3>=0.9.11",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
]
